unpackaged/main/default/objects/Vendor_Rating__c/Vendor_Rating__c.object-meta.xml
<CustomObject>
    <label>Vendor Rating</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Vendor Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>