unpackaged/main/default/objects/Vendor_Rating__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>LegalStratusISV__Matter__c</referenceTo>
    <relationshipLabel>Vendor Ratings</relationshipLabel>
    <relationshipName>Vendor_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>