unpackaged/main/default/objects/Vendor_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Grade__c)),
    NULL,
    IMAGE(
        "/img/samples/stars_" + TEXT(Grade__c) + "00.gif",
        "Rating Level"
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>